--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -11,9 +11,15 @@
 			<li class="list-group-item">
 			<h3>
 				<%=link_to "#{group.name}", group_path(group) %>
-			</h3>
+			</h3>  
+			<a href="/groups/<%= group.id%>/group_details" class="btn btn-info">View</a>
 			<span>
-				<%=link_to "Created By :#{group.group_creator}", group_path(group)%>
+				<%if group.group_creator == @current_user.username%>
+				<a data-method="delete" href="/groups/<%= group.id%>" class="btn btn-danger">Delete</a> Group Admin : me 
+				<%else%>
+				Group Admin : 
+			<a href="/users/<%= User.find_by_username(group.group_creator).id%>" class="btn btn-info"> <%= group.group_creator %> </a>
+				<%end%>
 			</span>
 		   </li>
 		  <% end%>
